--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,20 @@
 <resources>
 
     <style name="Theme.Vibeify" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.Vibeify.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+
+        <!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
+             animated drawable. One of these is required. -->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_krustig</item>
+        <!-- Required for animated icons -->
+        <item name="windowSplashScreenAnimationDuration">200</item>
+
+        <!-- Set the theme of the Activity that follows your splash screen. -->
+        <!-- @android:style/Theme.NoTitleBar.Fullscreen affects the status bar
+             and navigation bar, so remember to remove the immersive mode attributes
+             from your Activity theme. -->
+        <item name="postSplashScreenTheme">@style/Theme.Vibeify</item>
+    </style>
 </resources>
