--- a/app/src/main/res/xml/my_app_widget_info.xml
+++ b/app/src/main/res/xml/my_app_widget_info.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minWidth="300dp"
+    android:minHeight="160dp"
+    android:updatePeriodMillis="0"
+    android:resizeMode="horizontal|vertical"
     android:initialLayout="@layout/glance_default_loading_layout">
 </appwidget-provider>
