--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Widget Colors -->
+    <color name="widget_background">#FF1E1E1E</color>
+    <color name="widget_album_art_background">#FF333333</color>
+    <color name="widget_text_primary">#FFFFFFFF</color>
+    <color name="widget_text_secondary">#FFCCCCCC</color>
+    <color name="widget_icon_color">#FFCCCCCC</color>
+    <color name="widget_button_primary">#FF1DB954</color>
+    <color name="widget_button_secondary">#FF444444</color>
 </resources>
